src/modules/75-cd/components/PipelineStudio/DeployStageSetupShell/DeployStage.module.scss
/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.tabHeading {
  display: flex;
  align-items: center;
  font-size: 16px;
  color: var(--black);
  font-weight: 600;
  line-height: 24px;
  margin-top: var(--spacing-7);
}

.deployStage {
  min-width: 464px;
  max-height: 635px;
  margin-top: 2px;
  overflow-y: scroll;
  .content-section {
    background-color: var(--form-bg);
    height: 100%;
    > .tabHeading {
      &:first-child {
        margin-top: 0;
      }
    }
  }
  .padded-section {
    padding: var(--spacing-xxlarge) var(--spacing-huge) var(--spacing-13) var(--spacing-huge);
  }
  .padded-section-new {
    padding: var(--spacing-medium) !important;
    background-color: var(--white) !important;
  }
  .editServiceModal {
    padding: 0;
  }
  .accordion {
    margin-top: var(--spacing-7);
    > div {
      padding: 0 !important;
    }
    :global(.bp3-collapse-body > div) {
      padding: 0;
    }
    .tabHeading {
      margin-top: 0;
      margin-left: var(--spacing-small);
      margin-right: var(--spacing-small);
    }
  }
}
.tabSubHeading {
  font-size: var(--font-size-normal);
  color: var(--grey-700);
  margin-bottom: var(--spacing-5);
  font-weight: 600;
}
.section-card {
  width: 1024px;
  margin-top: var(--spacing-3);
  display: block;
  padding: var(--spacing-7);
  .info {
    font-size: 13px;
  }
  .thumbnailSelect {
    &:global(.bp3-form-group) {
      margin-bottom: 0px;
    }
  }
  .cardListContainer {
    margin-top: 0 !important;
  }
}

.divider {
  margin: var(--spacing-7) 0px;
  width: 1024px;
}

.stage-view {
  margin-top: var(--spacing-3);
  display: block;
  padding-top: var(--spacing-medium);
  .info {
    font-size: 13px;
  }
  .deployment-type-heading {
    font-size: var(--font-size-normal);
    color: var(--grey-600);
    font-weight: 500;
    margin-bottom: var(--spacing-5);
  }
  .thumbnailSelect {
    &:global(.bp3-form-group) {
      margin-bottom: 0px;
    }
  }
  .cardListContainer {
    margin-top: 0 !important;
  }
}

.multiTypeBtn {
  display: inline-block;
}

